--- a/index.html
+++ b/index.html
@@ -4,7 +4,120 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <title>Cleaning Service Albania</title>
   </head>
-  <body></body>
+  <body>
+    <nav>
+      <div class="nav-container">
+        <div class="image-container">
+          <img src="images/logo.png" alt="logo of csa" class="image" />
+        </div>
+        <ul class="links">
+          <li><a href="#">ABOUT US</a></li>
+          <li><a href="#">CONTACT US</a></li>
+          <li><a href="#">SUBSCRIPTION</a></li>
+        </ul>
+      </div>
+    </nav>
+
+    <header>
+      <div class="header-container">
+        <div class="website-description">
+          <div class="title">Let Our Expert Cleaners Transform Your Space</div>
+          <div class="description">
+            Welcome to our cleaning service! We understand that cleaning can be
+            a hassle, but it's essential to maintaining a healthy and
+            comfortable living environment. That's where we come in. Our team of
+            expert cleaners is dedicated to providing you with a clean and
+            inviting space that you can be proud of.
+          </div>
+          <button class="btn">Sign up</button>
+        </div>
+        <div class="image-description">
+          <img
+            src="images/another-image.jpg"
+            alt="cleaning-image"
+            class="cleaning-image"
+          />
+        </div>
+      </div>
+    </header>
+
+    <main>
+      <div class="main-container-first">
+        <div class="information-title">Our Expertise.</div>
+        <div class="information-container">
+          <div class="info">
+            <img
+              src="images/kitchen-cleaning.jpg"
+              alt="kitchen-cleaning"
+              class="kitchen-cleaning"
+            />
+            <div class="info-desc">
+              Our kitchen cleaning service will leave your cooking and dining
+              area spotless and hygienic.
+            </div>
+          </div>
+          <div class="info">
+            <img
+              src="images/bathroom-cleaning.jpg"
+              alt="bathroom-cleaning"
+              class="bathroom-cleaning"
+            />
+            <div class="info-desc">
+              Bathroom cleaning service will leave your space sparkling clean
+              and sanitized.
+            </div>
+          </div>
+          <div class="info">
+            <img
+              src="images/bedroom-cleaning.jpg"
+              alt="bedroom-cleaning"
+              class="bedroom-cleaning"
+            />
+            <div class="info-desc">
+              Bedroom cleaning service will leave your sleeping quarters clean
+              and cozy.
+            </div>
+          </div>
+          <div class="info">
+            <img
+              src="images/bussiness-cleaning.jpeg"
+              alt="bussiness-cleaning"
+              class="bussiness-cleaning"
+            />
+            <div class="info-desc">
+              Business cleaning service will leave your commercial space looking
+              professional and inviting.
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="main-container-second">
+        <div class="quote">
+          I highly recommend this cleaning service to anyone looking for a
+          reliable, thorough, and eco-friendly cleaning service. They truly
+          exceeded my expectations, and I will definitely be using them again in
+          the future.
+        </div>
+        <div class="author">- Marie</div>
+      </div>
+
+      <div class="main-container-third">
+        <div class="action">
+          <div class="text">Call to action! It's time!</div>
+          <div class="text-desc">
+            Sign up for our product by clicking that button over there!
+          </div>
+        </div>
+        <button class="last-button">Sign up</button>
+      </div>
+
+      <div class="footer">
+        <div>Copyright &#169 CSA 2023</div>
+      </div>
+    </main>
+  </body>
 </html>
